Adjusted background and pokemon selector to avoid layout shifts when filtering pokemon

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,6 +19,7 @@
 
 body {
 	background: var(--gradient);
+	background-attachment: fixed;
 	color: var(--foreground);
 	font-family: Arial, Helvetica, sans-serif;
 }
